<resources>
    <string name="app_name">Pain Diary</string>

    <!--    start up page -->

    <string name="start_up_heading">Mobile Pain Diary</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="start_up_slogan">Record and monitor your pain anytime, anywhere</string>

    <!--    login page-->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_register">Create account now</string>

    <!--    register page-->
    <string name="register_email">Email</string>
    <string name="register_login">Login now</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm password</string>

    <!--    dashboard page-->
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_welcome">Welcome </string>
    <string name="dashboard_subtitle">Manage your pain records easily</string>
    <string name="dashboard_data_entry">Pain Data Entry</string>
    <string name="dashboard_daily_record">Daily Record</string>
    <string name="dashboard_report">Pain Report</string>
    <string name="dashboard_map">Map</string>
    <string name="dashboard_logout">Logout</string>
    <string name="dashboard_worker">Worker</string>
    <!--    weather related -->
    <string name="dashboard_weather_title">Weather today in</string>
    <string name="dashboard_weather_city">City</string>
    <string name="dashboard_weather_degree">Degree</string>
    <string name="dashboard_weather_humidity">Humidity</string>
    <string name="dashboard_weather_pressure">Pressure</string>

    <string name="dashboard_weather_humidity_default">Humidity</string>
    <string name="dashboard_weather_pressure_default">Pressure</string>

    <!--    navigation drawer-->
    <string name="menu_title_welcome">Welcome</string>
    <string name="menu_title_user">User</string>
    <string name="menu_home">Home</string>
    <string name="menu_data_entry">Pain Data Entry</string>
    <string name="menu_daily_record">Daily Record</string>
    <string name="menu_report">Pain Report</string>
    <string name="menu_map">Maps</string>
    <string name="menu_worker">Worker</string>
    <string name="menu_logout">Logout</string>

    <!--    data entry fragment related -->
    <string name="entry_date_info">Date Information</string>
    <string name="entry_title">Enter Pain Data</string>
    <string name="entry_date">Date </string>
    <string name="entry_select_date">Select Date</string>
    <string name="entry_weather_info">Weather Information</string>
    <string name="entry_temperature">Temperature in °C</string>
    <string name="entry_humidity">Humidity</string>
    <string name="entry_pressure">Pressure</string>
    <string name="entry_pain_info">Pain Information</string>
    <string name="entry_pain_location">Pain Location</string>
    <string name="entry_mood">Mood</string>
    <string name="entry_pain_level">Pain Level</string>
    <string name="entry_exercise_goal">Exercise Goal(steps)</string>
    <string name="entry_steps_walked">Steps Walked Today</string>
    <string name="entry_btn_back">Back</string>
    <string name="entry_btn_save">Save</string>
    <string name="entry_btn_set_alarm">Alarm</string>
    <string name="entry_default_exercise_goal">10000</string>

    <!--    recycle view related -->
    <string name="rv_date">Date</string>
    <string name="rv_pain_location">Pain Location</string>
    <string name="rv_pain_level">Pain Level</string>
    <string name="rv_actions">Action</string>

    <!--    update dialog-->
    <string name="update_title">Update Pain Data</string>
    <string name="update_cancel_btn">Cancel</string>
    <string name="update_date_info">Date Information</string>
    <string name="update_date">Date </string>
    <string name="update_select_date">Select Date</string>
    <string name="update_weather_info">Weather Information</string>
    <string name="update_temperature">Temperature in °C</string>
    <string name="update_humidity">Humidity</string>
    <string name="update_pressure">Pressure</string>
    <string name="update_pain_info">Pain Information</string>
    <string name="update_pain_location">Pain Location</string>
    <string name="update_mood">Mood</string>
    <string name="update_pain_level">Pain Level</string>
    <string name="update_exercise_goal">Exercise Goal</string>
    <string name="update_steps_walked">Steps Walked Today</string>
    <string name="update_btn_back">Back</string>
    <string name="update_btn_save">Save</string>
    <string name="update_btn_set_alarm">Alarm</string>
    <string name="update_default_exercise_goal">10000</string>

    <!--    report section-->
    <string name="report_title">Pain Report</string>
    <string name="report_pain_location_piechart">Pain Location Pie Chart</string>
    <string name="report_steps_taken_piechart">Steps Taken Pie Chart</string>
    <string name="report_pain_weather_linechart">Pain Weather Line Chart</string>

    <!--    chart section -->
    <string name="line_start_date">Start Date</string>
    <string name="line_end_date">End Date</string>
    <string name="line_date_btn">Select Date</string>
    <string name="line_generate_btn">Generate Graph</string>
    <string name="line_perform_btn">Perform Test</string>
    <string name="line_weather_attribute">Weather Attribute</string>

    <!--    worker related-->
    <string name="worker_set_task_btn">Set Routine Task</string>
    <string name="worker_cancel_task_btn">Cancel Routine Task</string>
    <string name="worker_select_time">Select Time</string>
    <string name="worker_title">Select time to upload data</string>


    <!--    API key-->
    <string name="openmap_api_key">c43e1b6bf73fbd95b702ad08d47b2bb2</string>
</resources>