<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".fragment.DataEntryFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/entry_title"
        android:textColor="#5E5E5E"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/entry_date_info"
            android:textColor="#5E5E5E"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:background="#7a8b8b8b"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entryDateTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/entry_date"
            android:layout_weight="0.8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/entryDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:enabled="false"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/entryDateBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/entry_select_date"
            android:textSize="12sp"
            android:backgroundTint="@color/theme_red"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/entry_weather_info"
            android:textColor="#5E5E5E"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:background="#7a8b8b8b"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entryTemperatureTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/entry_temperature"
            app:hintTextColor="@color/theme_text"
            app:boxStrokeColor="@color/theme_text"
            app:boxStrokeWidthFocused="2dp"
            android:layout_weight="0.3"
            android:layout_margin="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:textSize="14sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entryHumidityTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/entry_humidity"
            app:hintTextColor="@color/theme_text"
            app:boxStrokeColor="@color/theme_text"
            app:boxStrokeWidthFocused="2dp"
            android:layout_weight="0.3"
            android:layout_margin="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:textSize="14sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entryPressureTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/entry_pressure"
            app:hintTextColor="@color/theme_text"
            app:boxStrokeColor="@color/theme_text"
            app:boxStrokeWidthFocused="2dp"
            android:layout_weight="0.3"
            android:layout_margin="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:textSize="14sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/entry_pain_info"
            android:textColor="#5E5E5E"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:background="#7a8b8b8b"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/entry_pain_level"
            android:fontFamily="@font/roboto_medium" />
        <com.google.android.material.slider.Slider
            android:id="@+id/entryPainLevel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            app:tickColor="@color/theme_red"
            android:valueFrom="0"
            android:valueTo="10"
            android:stepSize="1"
            android:layout_marginLeft="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entryPainLocationLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/entry_pain_location"
            app:hintTextColor="@color/theme_text"
            app:boxStrokeColor="@color/theme_text"
            app:boxStrokeWidthFocused="2dp"
            android:layout_weight="0.3"
            android:layout_margin="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/entryPainLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:editable="false" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entryMoodLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/entry_mood"
            app:hintTextColor="@color/theme_text"
            app:boxStrokeColor="@color/theme_text"
            app:boxStrokeWidthFocused="2dp"
            android:layout_weight="0.3"
            android:layout_margin="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:id="@+id/entryMood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:editable="false" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entryExerciseGoalLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/entry_exercise_goal"
            app:hintTextColor="@color/theme_text"
            app:boxStrokeColor="@color/theme_text"
            app:boxStrokeWidthFocused="2dp"
            android:layout_weight="0.3"
            android:layout_margin="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:inputType="number"
                android:text="@string/entry_default_exercise_goal"
                android:maxLength="10"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/entryStepsWalkedLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/entry_steps_walked"
            app:hintTextColor="@color/theme_text"
            app:boxStrokeColor="@color/theme_text"
            app:boxStrokeWidthFocused="2dp"
            android:layout_weight="0.3"
            android:layout_margin="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/entryStepsWalked"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:inputType="number"
                android:maxLength="10"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/entryBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_btn_back"
            android:textColor="@color/white"
            android:backgroundTint="@color/theme_red"/>

        <Button
            android:id="@+id/entryAlarmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:backgroundTint="@color/theme_red"
            android:text="@string/entry_btn_set_alarm" />

        <Button
            android:id="@+id/entrySaveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/entry_btn_save"
            android:backgroundTint="@color/theme_red"
            android:textColor="@color/white"/>
    </RelativeLayout>

</LinearLayout>