<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartUp"
    android:background="@drawable/gradient"
    android:padding="60dp"
    android:transitionName="transition_back_arrow">


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/pain_logo">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/start_up_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/theme_red"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/start_up_slogan"
            android:textAlignment="center"
            android:textColor="@color/theme_red"
            android:textSize="18dp">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            
            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/white"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/theme_red"
                android:onClick="user_login"
                android:transitionName="transition_login">
            </Button>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/theme_red"
                android:text="@string/register"
                android:onClick="user_register"
                android:transitionName="transition_register">
            </Button>
        </LinearLayout>
    </LinearLayout>

</ScrollView>