<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DailyRecordsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recordRecyclerView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16sp"
            android:text="@string/rv_date"
            android:paddingTop="15dp"
            android:layout_weight="0.2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16sp"
            android:text="@string/rv_pain_location"
            android:layout_weight="0.2"
            android:gravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16sp"
            android:text="@string/rv_pain_level"
            android:layout_weight="0.2"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16sp"
            android:text="@string/rv_actions"
            android:layout_weight="0.2"
            android:gravity="center" />
    </LinearLayout>

   <androidx.recyclerview.widget.RecyclerView
       android:layout_marginTop="60dp"
       android:id="@+id/recordRecyclerView"
       android:layout_width="0dp"
       android:layout_height="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:listitem="@layout/recycler_view_layout">

   </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="NO Data"
        android:textColor="@color/theme_red"
        android:textSize="20dp"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>