<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".fragment.WorkerFragment">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="14dp"
    android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/worker_title"
            android:textColor="#5E5E5E"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:background="#7a8b8b8b"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/workerTimeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/worker_select_time"
            android:layout_weight="0.8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/workerSelectTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:enabled="false"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_medium">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/workerSelectTimeBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/worker_select_time"
            android:textSize="12sp"
            android:backgroundTint="@color/theme_red"
            android:textColor="@color/white"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <Button
            android:id="@+id/workerSetTaskBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/worker_set_task_btn"
            android:textColor="@color/white"
            android:backgroundTint="@color/theme_red"/>

        <Button
            android:id="@+id/workerCancelTaskBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/worker_cancel_task_btn"
            android:backgroundTint="@color/theme_red"
            android:textColor="@color/white"/>
    </RelativeLayout>
</LinearLayout>